--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<a href="PETERCOBO_01.html">PETERCOBO_01</a><br />
 			<a href="PETERCOBO_03.html">PETERCOBO_03</a><br />
 			<a href="PETERCOBO_04.html">PETERCOBO_04</a><br />
-			<a href="ATTITUDE_1.html">ATTITUDE_1</a>
+			<a href="ATTITUDE_1.html">ATTITUDE_1</a><br />
 			<a href="ATTITUDE_3.html">ATTITUDE_3</a>
 	</body>
 </html>
